# max_clique

./: .env.example  .gitignore  Cargo.toml  README.md  install.ps1  install.sh  miner.env.example  output.txt  pyproject.toml  requirements.txt  setup.py  start_miner.sh
crates/model_upgrade_core/: Cargo.toml
crates/model_upgrade_core/src/: bitsets.rs  branch_bound.rs  dense.rs  graph_utils.rs  heuristics.rs  lib.rs  solver.rs  validation.rs
crates/model_upgrade_py/: Cargo.toml  pyproject.toml
crates/model_upgrade_py/src/: lib.rs
model_upgrade/: __init__.py  bitsets.py  branch_bound.py  components.py  dense.py  graph_utils.py  heuristics.py  miner.py  solver.py  validation.py  validator_store.py
scripts/: benchmark.py  compare_rust_python.py  download_test_data.py  generate_large_clique_tests.py  generate_shuffled_tests.py  preflight.sh  preflight_submit.py  probe_miner.py
