[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-upgrade"
version = "0.2.0"
description = "Rust maximum clique solver and miner for Bittensor subnet 83 (CliqueAI)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["maturin>=1.7"]

[tool.setuptools.packages.find]
include = ["model_upgrade*"]
