[package]
name = "model_upgrade_rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for model_upgrade_core"

[lib]
name = "model_upgrade_rs"
crate-type = ["cdylib"]

[dependencies]
model_upgrade_core = { path = "../model_upgrade_core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
